--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<title>Cam Milligan</title>
+<title>c a m</title>
 <head>
   <link href='https://fonts.googleapis.com/css?family=Sarpanch:400,600' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Share+Tech' rel='stylesheet' type='text/css'>
@@ -31,9 +31,15 @@
   </nav>
   <!--./navbar-->
 
-  <!--logo webGL-->
+  <!--blockchian sick-->
+  <div id="particles-js"></div>
+  <!--./blockchian sick-->
+
+  <!-- logo webGL->
   <div id="figure-web" class="figure-web"></div>
-  <!--./logo webGL-->
+  <!-./logo webGL-->
+
+
 
   <!--terminal-->
   <div class="terminal-left terminal-style" id="terminal-left">
@@ -54,7 +60,7 @@
 
   <!--bug report
   <div id="bug-report">
-    <a href="https://github.com/tony-elistratov/tony-elistratov.github.io/issues/new" title="I found a bug!"><img src="images/bug.png"></a>
+    <a href="https://github.com/tony-elistratov/tony-elistratov.github.io/issues/new" title="I found a bug!"><img src="static/images/bug.png"></a>
   </div>
   ./bug report-->
 
@@ -78,12 +84,13 @@
     <section>
       <div class="row">
         <article class="col-md-12 text-center" >
-          <p id="my-bio">I am a passionate web developer and I specialize in MEAN stack Front-End/Full-Stack development.
-          Currently, I mainly contribute to open source projects, who need a rockstar developer to fix important bug reports.
-          My dad showed me how to turn on the computer once and since that moment I started to speak code. I never stopped.
-          Now, I am trying to add new words to my vocabulary by practicing React.js, Ember.js, p5.js.
-          My educational background includes several coding bootcamps, online courses from freeCodeCamp and I am currently getting my OCAD in software development.
-          There is a rumor that I like playing chess as much as I like programming, but it is not confirmed.</p>
+          <p id="my-bio">To describe the nature of this artificial man, I will consider<br>
+            First, the matter thereof, and the artificer; both which is man.<br>
+            Secondly, how, and by what covenants it is made; what are the rights<br>
+            Thirdly, what is a Christian Commonwealth.<br>
+            Lastly, what is the Kingdom of Darkness.<br>
+            <i>Hobbs, 1651</i>
+          </p>
         </article>
       </div>
     </section>
@@ -104,25 +111,25 @@
       <div class="row" id="skills-short">
 
         <article class="col-md-3">
-          <img class="mx-auto skills-sec" src="images/javascript.svg">
+          <img class="mx-auto skills-sec" src="static/images/javascript.svg">
           <h3 class="text-center">Javascript</h3>
           <p>JavaScript is one of the three core technologies of World Wide Web content production. It is used to make webpages interactive and provide online programs, including video games. </p>
         </article>
 
         <article class="col-md-3">
-          <img class="mx-auto skills-sec" src="images/jquery.svg">
+          <img class="mx-auto skills-sec" src="static/images/jquery.svg">
           <h3 class="text-center">JQuery</h3>
           <p>jQuery is a cross-platform JavaScript library designed to simplify the client-side scripting of HTML. It is free, open-source software using the permissive MIT License. Web analysis indicates that it is the most widely deployed JavaScript library by a large margin.</p>
         </article>
 
         <article class="col-md-3">
-          <img class="mx-auto skills-sec" src="images/react.svg">
+          <img class="mx-auto skills-sec" src="static/images/react.svg">
           <h3 class="text-center">React</h3>
           <p>React allows developers to create large web-applications that use data and can change over time without reloading the page. It aims primarily to provide speed, simplicity, and scalability. React processes only user interfaces in applications. </p>
         </article>
 
         <article class="col-md-3">
-          <img class="mx-auto skills-sec" src="images/angular.svg">
+          <img class="mx-auto skills-sec" src="static/images/angular.svg">
           <h3 class="text-center">Angular</h3>
           <p>Angular is a framework for building client applications in HTML and either JavaScript or a language like TypeScript that compiles to JavaScript. Angular empowers developers to build applications that live on the web, mobile, or the desktop.</p>
         </article>
@@ -144,15 +151,15 @@
     <section>
       <div class="row" style="padding-top: 40px;">
         <div class="col-md-12">
-          <img class="msc" src="images/coding.png" style="float:left;" class="pull-left">
+          <img class="msc" src="static/images/coding.png" style="float:left;" class="pull-left">
           <p class="pull-left msc-text" style="text-align: left;">Moscow Coding School is a coding bootcamp that offers a wide variety of part time courses. I was learning vanilla JavaScript, jQuery and AJAX there. I acquired my coding certificate from this bootcamp during fall 2016-2017.</p>
         </div>
         <div class="col-md-12">
-          <img class="msc" src="images/coding_2.jpg" style="float:right;" class="pull-right">
+          <img class="msc" src="static/images/coding_2.jpg" style="float:right;" class="pull-right">
           <p class="pull-right msc-text" style="text-align: right;">FreeCodeCamp is a nonprofit organization that consists of an interactive learning web platform. I was an active user during 2017-2018 and acquired my Front-End Development Certificate.</p>
         </div>
         <div class="col-md-12">
-          <img class="msc" src="images/coding_3.png" style="float:left" class="pull-left">
+          <img class="msc" src="static/images/coding_3.png" style="float:left" class="pull-left">
           <p class="pull-left msc-text" style="text-align: left;">Seneca College of Applied Arts and Technology is a public college located in Toronto, Ontario, Canada. I am currently enrolled in one of the software engineering programs that Seneca offers. My expected graduation date is 2018.</p>
         </div>
       </div>
@@ -175,40 +182,40 @@
 
         <!--first row-->
         <article class="col-md-4 text-justify">
-            <img class="mx-auto portfolio-sec" src="images/placeholder.jpg">
-            <h3 class="text-center">Search Engine</h3>
+            <img class="mx-auto portfolio-sec" src="static/images/placeholder.jpg">
+            <h3 class="text-center">Project #1</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut ullamcorper felis, ut sodales odio. Suspendisse lectus dui, efficitur eget molestie eget, commodo vel dui. Suspendisse eu mauris hendrerit, aliquam libero vel, ornare quam. Donec quis quam eleifend, auctor lorem a, placerat quam.</p>
         </article>
 
         <article class="col-md-4 text-justify">
-            <img class="mx-auto portfolio-sec" src="images/placeholder.jpg">
-            <h3 class="text-center">Tribute Page</h3>
+            <img class="mx-auto portfolio-sec" src="static/images/placeholder.jpg">
+            <h3 class="text-center">Project #2</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut ullamcorper felis, ut sodales odio. Suspendisse lectus dui, efficitur eget molestie eget, commodo vel dui. Suspendisse eu mauris hendrerit, aliquam libero vel, ornare quam. Donec quis quam eleifend, auctor lorem a, placerat quam.</p>
         </article>
 
         <article class="col-md-4 text-justify">
-            <img class="mx-auto portfolio-sec" src="images/placeholder.jpg">
-            <h3 class="text-center">Twitch.tv API</h3>
+            <img class="mx-auto portfolio-sec" src="static/images/placeholder.jpg">
+            <h3 class="text-center">Project #3</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut ullamcorper felis, ut sodales odio. Suspendisse lectus dui, efficitur eget molestie eget, commodo vel dui. Suspendisse eu mauris hendrerit, aliquam libero vel, ornare quam. Donec quis quam eleifend, auctor lorem a, placerat quam.</p>
         </article>
         <!--./first row-->
 
         <!--second row-->
         <article class="col-md-4">
-            <img class="mx-auto portfolio-sec" src="images/placeholder.jpg">
-            <h3 class="text-center">Random Quote Machine</h3>
+            <img class="mx-auto portfolio-sec" src="static/images/placeholder.jpg">
+            <h3 class="text-center">Project #4</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut ullamcorper felis, ut sodales odio. Suspendisse lectus dui, efficitur eget molestie eget, commodo vel dui. Suspendisse eu mauris hendrerit, aliquam libero vel, ornare quam. Donec quis quam eleifend, auctor lorem a, placerat quam.</p>
         </article>
 
         <article class="col-md-4 text-justify">
-            <img class="mx-auto portfolio-sec" src="images/placeholder.jpg">
-            <h3 class="text-center">Local Weather</h3>
+            <img class="mx-auto portfolio-sec" src="static/images/placeholder.jpg">
+            <h3 class="text-center">Project #5</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut ullamcorper felis, ut sodales odio. Suspendisse lectus dui, efficitur eget molestie eget, commodo vel dui. Suspendisse eu mauris hendrerit, aliquam libero vel, ornare quam. Donec quis quam eleifend, auctor lorem a, placerat quam.</p>
         </article>
 
         <article class="col-md-4 text-justify">
-            <img class="mx-auto portfolio-sec " src="images/placeholder.jpg">
-            <h3 class="text-center">Wikipedia Viewer</h3>
+            <img class="mx-auto portfolio-sec " src="static/images/placeholder.jpg">
+            <h3 class="text-center">Project #6</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut ullamcorper felis, ut sodales odio. Suspendisse lectus dui, efficitur eget molestie eget, commodo vel dui. Suspendisse eu mauris hendrerit, aliquam libero vel, ornare quam. Donec quis quam eleifend, auctor lorem a, placerat quam.</p>
         </article>
         <!--./second row-->
@@ -249,9 +256,9 @@
                 <div class='form-group'>
                   <label for='subject'>Subject</label>
                   <select name='subject' class='form-control'>
-                    <option>Front-End/Full-Stack Project</option>
+                    <option>Blockchain</option>
                     <option>Open Source Contribution</option>
-                    <option>Another Gig</option>
+                    <option>Other Inquiry</option>
                   </select>
                 </div>
               </div>
@@ -294,9 +301,14 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
 <!--bootstrap-->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+
+<script src="static/js/particles.js"></script>
+<script src="static/js/main.js"></script>
+
+
 <script src="static/js/typed.min.js"></script>
 <script src="static/js/terminal.js"></script>
-<script src="static/js/three.min.js"></script>
-<script src="static/js/Detector.js"></script>
-<script src="static/js/logo.js"></script>
+<!--<script src="static/js/three.min.js"></script>-->
+<!--<script src="static/js/Detector.js"></script>-->
+<!--<script src="static/js/logo.js"></script>-->
 </body>
