--- a/templates/page_not_found.html
+++ b/templates/page_not_found.html
@@ -1,1 +1,45 @@
-404
+
+<head>
+  <link href='https://fonts.googleapis.com/css?family=Sarpanch:400,600' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Share+Tech' rel='stylesheet' type='text/css'>
+  <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+  <link href='https://fonts.googleapis.com/css?family=Josefin+Sans' rel='stylesheet' type='text/css'>
+  <title>4 0 4</title>
+  <!--bootstrap-->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+
+  <!--custom styles-->
+  <link rel="stylesheet" href="static/css/main.css">
+</head>
+<body>
+<div class="container-fluid"></div>
+<div id="front-pg-bg" class="front-pg-bg">
+
+  <!--blockchian sick-->
+  <div id="particles-js"></div>
+  <!--./blockchian sick-->
+
+  <!--terminal-->
+
+  <!--./ terminal-->
+
+  <!--soundcloud player-->
+  <div id="soundcloud">
+    <iframe width="100%" height="20" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/46593733&amp;color=%23000000&amp;inverse=true&amp;auto_play=true&amp;show_user=true"></iframe>
+  </div>
+  <!--./soundcloud player-->
+
+</div>
+<!-- ./ content -->
+<!--./ terminal-->
+<!--jquery-->
+<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+<!--tether-->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+<!--bootstrap-->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+
+<script src="static/js/particles.js"></script>
+<script src="static/js/main.js"></script>
+
+</body>
