--- a/templates/index.html
+++ b/templates/index.html
@@ -111,7 +111,7 @@
       <div class="row" id="skills-short">
 
         <article class="col-md-3">
-          <img class="mx-auto skills-sec" src="static/images/javascript.svg">
+          <img class="mx-auto skills-sec" src="static/images2/eth.svg">
           <h3 class="text-center">Javascript</h3>
           <p>JavaScript is one of the three core technologies of World Wide Web content production. It is used to make webpages interactive and provide online programs, including video games. </p>
         </article>
