--- a/templates/index.html
+++ b/templates/index.html
@@ -111,25 +111,25 @@
       <div class="row" id="skills-short">
 
         <article class="col-md-3">
-          <img class="mx-auto skills-sec" src="static/images2/eth.svg">
+          <img class="mx-auto skills-sec" src="static/images2/BTC.svg">
           <h3 class="text-center">Javascript</h3>
           <p>JavaScript is one of the three core technologies of World Wide Web content production. It is used to make webpages interactive and provide online programs, including video games. </p>
         </article>
 
         <article class="col-md-3">
-          <img class="mx-auto skills-sec" src="static/images/jquery.svg">
+          <img class="mx-auto skills-sec" src="static/images2/ETH-alt.svg">
           <h3 class="text-center">JQuery</h3>
           <p>jQuery is a cross-platform JavaScript library designed to simplify the client-side scripting of HTML. It is free, open-source software using the permissive MIT License. Web analysis indicates that it is the most widely deployed JavaScript library by a large margin.</p>
         </article>
 
         <article class="col-md-3">
-          <img class="mx-auto skills-sec" src="static/images/react.svg">
+          <img class="mx-auto skills-sec" src="static/images2/ADA-alt.svg">
           <h3 class="text-center">React</h3>
           <p>React allows developers to create large web-applications that use data and can change over time without reloading the page. It aims primarily to provide speed, simplicity, and scalability. React processes only user interfaces in applications. </p>
         </article>
 
         <article class="col-md-3">
-          <img class="mx-auto skills-sec" src="static/images/angular.svg">
+          <img class="mx-auto skills-sec" src="static/images2/XMR.svg">
           <h3 class="text-center">Angular</h3>
           <p>Angular is a framework for building client applications in HTML and either JavaScript or a language like TypeScript that compiles to JavaScript. Angular empowers developers to build applications that live on the web, mobile, or the desktop.</p>
         </article>
