updated skills to cryptos

--- a/templates/index.html
+++ b/templates/index.html
@@ -100,7 +100,7 @@
   <!--skills parallax-->
   <div class="skills-bg" id="skills">
     <div class="heading">
-      <span class="center">SKILLS</span>
+      <span class="center">CRYPTOS</span>
     </div>
   </div>
   <!--./skills parallax-->
@@ -112,26 +112,26 @@
 
         <article class="col-md-3">
           <img class="mx-auto skills-sec" src="static/images2/BTC.svg">
-          <h3 class="text-center">Javascript</h3>
-          <p>JavaScript is one of the three core technologies of World Wide Web content production. It is used to make webpages interactive and provide online programs, including video games. </p>
+          <h3 class="text-center">Bitcoin</h3>
+          <p>17x7XEjZMEXuywFCgaL5gsPpHjtetWaBYq </p>
         </article>
 
         <article class="col-md-3">
           <img class="mx-auto skills-sec" src="static/images2/ETH-alt.svg">
-          <h3 class="text-center">JQuery</h3>
-          <p>jQuery is a cross-platform JavaScript library designed to simplify the client-side scripting of HTML. It is free, open-source software using the permissive MIT License. Web analysis indicates that it is the most widely deployed JavaScript library by a large margin.</p>
+          <h3 class="text-center">Ethereum</h3>
+          <p>0x07aBaAfFe732eFCA99d22495F64a1c185C9BD090</p>
         </article>
 
         <article class="col-md-3">
           <img class="mx-auto skills-sec" src="static/images2/ADA-alt.svg">
-          <h3 class="text-center">React</h3>
-          <p>React allows developers to create large web-applications that use data and can change over time without reloading the page. It aims primarily to provide speed, simplicity, and scalability. React processes only user interfaces in applications. </p>
+          <h3 class="text-center">Cardano</h3>
+          <p>DdzFFzCqrht8So9JS8DfefPWCDK35SJPeGPDpQkBinBaSEFGYsfL1ub8NfjqC1bUjQo4cwsnJ7e32GaqN9dWKvvKUm5q5wKueuGHuSbK</p>
         </article>
 
         <article class="col-md-3">
           <img class="mx-auto skills-sec" src="static/images2/XMR.svg">
-          <h3 class="text-center">Angular</h3>
-          <p>Angular is a framework for building client applications in HTML and either JavaScript or a language like TypeScript that compiles to JavaScript. Angular empowers developers to build applications that live on the web, mobile, or the desktop.</p>
+          <h3 class="text-center">Monero</h3>
+          <p>48R1tZq1yV18eVCHYc7Zd9hhvHqJ4wxWdidQN7o199jMWtpEva8dPtDa24aJWNvYayGUtT2g2mo7AHJwuPtqumhi1XtuDXp</p>
         </article>
       </div>
     </section>
