updated skills to cryptos

--- a/templates/index.html
+++ b/templates/index.html
@@ -110,7 +110,7 @@
   <!--skills-->
   <div class="container">
     <section>
-      <div class="row" id="skills-short">
+      <div class="row" id="skills-short" style="padding-top: 40px;">
 
         <article class="col-md-3">
           <img class="mx-auto skills-sec" src="static/images2/BTC.svg">
