--- a/templates/page_not_found.html
+++ b/templates/page_not_found.html
@@ -8,6 +8,8 @@
   <!--bootstrap-->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
 
+  <link rel="icon" type="image/png" href="static/images2/favicon.png" />
+
   <!--custom styles-->
   <link rel="stylesheet" href="static/css/main.css">
 </head>
