--- a/templates/index.html
+++ b/templates/index.html
@@ -105,7 +105,7 @@
   <!--skills parallax-->
   <div class="skills-bg" id="skills">
     <div class="heading">
-      <span class="center">CRYPTOS</span>
+      <span class="center">SKILLS</span>
     </div>
   </div>
   <!--./skills parallax-->
@@ -136,7 +136,7 @@
         <article class="col-md-3">
           <img class="mx-auto skills-sec" src="static/images2/XMR.svg">
           <h3 class="text-center">Monero</h3>
-          <p>!</p>
+          <p>!!!!!</p>
         </article>
       </div>
     </section>
@@ -157,15 +157,15 @@
       <div class="row" style="padding-top: 40px;">
         <div class="col-md-12">
           <img class="msc" src="static/images/coding.png" style="float:left;" class="pull-left">
-          <p class="pull-left msc-text" style="text-align: left;">Moscow Coding School is a coding bootcamp that offers a wide variety of part time courses. I was learning vanilla JavaScript, jQuery and AJAX there. I acquired my coding certificate from this bootcamp during fall 2016-2017.</p>
+          <p class="pull-left msc-text" style="text-align: left;">IDK what i did here.</p>
         </div>
         <div class="col-md-12">
           <img class="msc" src="static/images/coding_2.jpg" style="float:right;" class="pull-right">
-          <p class="pull-right msc-text" style="text-align: right;">FreeCodeCamp is a nonprofit organization that consists of an interactive learning web platform. I was an active user during 2017-2018 and acquired my Front-End Development Certificate.</p>
+          <p class="pull-right msc-text" style="text-align: right;">what am i doing with my life.</p>
         </div>
         <div class="col-md-12">
           <img class="msc" src="static/images/coding_3.png" style="float:left" class="pull-left">
-          <p class="pull-left msc-text" style="text-align: left;">Seneca College of Applied Arts and Technology is a public college located in Toronto, Ontario, Canada. I am currently enrolled in one of the software engineering programs that Seneca offers. My expected graduation date is 2018.</p>
+          <p class="pull-left msc-text" style="text-align: left;">Favourite books maybe?.</p>
         </div>
       </div>
     </section>
