--- a/templates/index.html
+++ b/templates/index.html
@@ -160,7 +160,7 @@
           <p class="pull-left msc-text" style="text-align: left;">IDK what i did here.</p>
         </div>
         <div class="col-md-12">
-          <img class="msc" src="static/images/coding_2.jpg" style="float:right;" class="pull-right">
+          <img class="msc" src="static/images2/mcmaster.png" style="float:right;" class="pull-right">
           <p class="pull-right msc-text" style="text-align: right;">what am i doing with my life.</p>
         </div>
         <div class="col-md-12">
