--- a/templates/index.html
+++ b/templates/index.html
@@ -187,39 +187,39 @@
 
         <!--first row-->
         <article class="col-md-4 text-justify">
-            <img class="mx-auto portfolio-sec" src="static/images/placeholder.jpg">
-            <h3 class="text-center">Project #1</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut ullamcorper felis, ut sodales odio. Suspendisse lectus dui, efficitur eget molestie eget, commodo vel dui. Suspendisse eu mauris hendrerit, aliquam libero vel, ornare quam. Donec quis quam eleifend, auctor lorem a, placerat quam.</p>
+            <img class="mx-auto portfolio-sec" src="static/images/placeholder.jpg"><br>
+            <h3 class="text-center">Zen Tools</h3>
+            <p>The goal of this project is to provide an open and accessable collection of tools for use with the ZenCash ecosystem.</p>
         </article>
 
         <article class="col-md-4 text-justify">
-            <img class="mx-auto portfolio-sec" src="static/images/placeholder.jpg">
-            <h3 class="text-center">Project #2</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut ullamcorper felis, ut sodales odio. Suspendisse lectus dui, efficitur eget molestie eget, commodo vel dui. Suspendisse eu mauris hendrerit, aliquam libero vel, ornare quam. Donec quis quam eleifend, auctor lorem a, placerat quam.</p>
+            <img class="mx-auto portfolio-sec" src="static/images2/lightning.png"><br>
+            <h3 class="text-center">Lightning Network</h3>
+            <p>One of the most cutting edge technologies in the blockchain space is the lightning network. I want to explore operating a node, implementing platforms ontop of nodes, and investigating the possibility of integrating atomic swaps with litecoin and zencash. The goal is to integrate with a Lightning Network Daemon API.</p>
         </article>
 
         <article class="col-md-4 text-justify">
-            <img class="mx-auto portfolio-sec" src="static/images/placeholder.jpg">
-            <h3 class="text-center">Project #3</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut ullamcorper felis, ut sodales odio. Suspendisse lectus dui, efficitur eget molestie eget, commodo vel dui. Suspendisse eu mauris hendrerit, aliquam libero vel, ornare quam. Donec quis quam eleifend, auctor lorem a, placerat quam.</p>
+            <img class="mx-auto portfolio-sec" src="static/images2/raiden.png"><br>
+            <h3 class="text-center">Raiden Network</h3>
+            <p>This is a scaling solution for Ethereum similar to the Lightning Network. I want to investigate operating a node, deploying micro raiden pay wall, and creating open source one click deploy solutions.</p>
         </article>
         <!--./first row-->
 
         <!--second row-->
         <article class="col-md-4">
-            <img class="mx-auto portfolio-sec" src="static/images/placeholder.jpg">
-            <h3 class="text-center">Project #4</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut ullamcorper felis, ut sodales odio. Suspendisse lectus dui, efficitur eget molestie eget, commodo vel dui. Suspendisse eu mauris hendrerit, aliquam libero vel, ornare quam. Donec quis quam eleifend, auctor lorem a, placerat quam.</p>
+            <img class="mx-auto portfolio-sec" src="static/images2/solidity.svg"><br>
+            <h3 class="text-center">Solidity</h3>
+            <p>Solidity is the programming language of Ethereum. I want to explore the possibilities and integrate wherever possible. It could potentially serve as the backbone to other projects, creating cross chain platforms.</p>
         </article>
 
         <article class="col-md-4 text-justify">
-            <img class="mx-auto portfolio-sec" src="static/images/placeholder.jpg">
-            <h3 class="text-center">Project #5</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut ullamcorper felis, ut sodales odio. Suspendisse lectus dui, efficitur eget molestie eget, commodo vel dui. Suspendisse eu mauris hendrerit, aliquam libero vel, ornare quam. Donec quis quam eleifend, auctor lorem a, placerat quam.</p>
+            <img class="mx-auto portfolio-sec" src="static/images2/rick.png"><br>
+            <h3 class="text-center">Merchandise</h3>
+            <p>I want to explore starting a side business of merchandise and apperal related to blockchain, vaporwave, and cyberpunk.</p>
         </article>
 
         <article class="col-md-4 text-justify">
-            <img class="mx-auto portfolio-sec " src="static/images/placeholder.jpg">
+            <img class="mx-auto portfolio-sec " src="static/images/placeholder.jpg"><br>
             <h3 class="text-center">Project #6</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut ullamcorper felis, ut sodales odio. Suspendisse lectus dui, efficitur eget molestie eget, commodo vel dui. Suspendisse eu mauris hendrerit, aliquam libero vel, ornare quam. Donec quis quam eleifend, auctor lorem a, placerat quam.</p>
         </article>
