--- a/templates/index.html
+++ b/templates/index.html
@@ -55,10 +55,11 @@
     </div>
   </div>
   <!--./ terminal-->
+  <!-- soundcloud for blank banshee 68675282-->
 
   <!--soundcloud player-->
   <div id="soundcloud">
-    <iframe width="100%" height="20" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/68675282&amp;color=%23000000&amp;inverse=true&amp;auto_play=true&amp;show_user=true"></iframe>
+    <iframe width="100%" height="20" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/182972240&amp;color=%23000000&amp;inverse=true&amp;auto_play=true&amp;show_user=true"></iframe>
   </div>
   <!--./soundcloud player-->
 
@@ -187,7 +188,7 @@
 
         <!--first row-->
         <article class="col-md-4 text-justify">
-            <img class="mx-auto portfolio-sec" src="static/images/placeholder.jpg"><br>
+            <img class="mx-auto portfolio-sec" src="static/images2/zen.png"><br>
             <h3 class="text-center">Zen Tools</h3>
             <p>The goal of this project is to provide an open and accessable collection of tools for use with the ZenCash ecosystem.</p>
         </article>
