--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,7 @@
   <link href='https://fonts.googleapis.com/css?family=Josefin+Sans' rel='stylesheet' type='text/css'>
 
   <link rel="stylesheet" href="static/css/cryptocoins.css">
+  <link rel="stylesheet" href="static/css/style.css">
   <!--<link rel="stylesheet" href="static/css/cryptocoins-colors.css">-->
 
   <link rel="icon" type="image/png" href="static/images2/favicon.png" />
