--- a/static/css/main.css
+++ b/static/css/main.css
@@ -105,7 +105,7 @@ structure and rearrange css
 
 /* content after parallax */
 .content {
-  position:absolute;
+  position:relative;
   width:100%;
   top:100%;
   height: 100px;
@@ -238,7 +238,7 @@ a:hover{
 
 /* soundcloud pro player */
 #soundcloud{
-  position: absolute;
+  position: relative;
   bottom: 0;
   width: 100%;
 }
