--- a/templates/index.html
+++ b/templates/index.html
@@ -118,8 +118,8 @@
       <div class="row" id="skills-short" style="padding-top: 40px;">
 
         <article class="col-md-3">
-          <img class="mx-auto skills-sec" src="static/images2/BTC.svg">
-          <h3 class="text-center">Bitcoin</h3>
+          <img class="mx-auto skills-sec" src="static/images2/python.png">
+          <h3 class="text-center">Python</h3>
           <p>Thicc </p>
         </article>
 
