--- a/templates/index.html
+++ b/templates/index.html
@@ -56,11 +56,11 @@
     </div>
   </div>
   <!--./ terminal-->
-  <!-- soundcloud for blank banshee 68675282-->
+  <!-- soundcloud for blank banshee 68675282  182972240-->
 
   <!--soundcloud player-->
   <div id="soundcloud">
-    <iframe width="100%" height="20" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/182972240&amp;color=%23000000&amp;inverse=true&amp;auto_play=true&amp;show_user=true"></iframe>
+    <iframe width="100%" height="20" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/68675282&amp;color=%23000000&amp;inverse=true&amp;auto_play=true&amp;show_user=true"></iframe>
   </div>
   <!--./soundcloud player-->
 
