--- a/templates/index.html
+++ b/templates/index.html
@@ -148,7 +148,7 @@
   <!--experience parallax-->
   <div class="exp-bg" id="experience">
     <div class="heading">
-      <span class="center">EXPERIENCE</span>
+      <span class="center">CREDENTIALS</span>
     </div>
   </div>
   <!--./experience parallax-->
@@ -158,16 +158,16 @@
     <section>
       <div class="row" style="padding-top: 40px;">
         <div class="col-md-12">
-          <img class="msc" src="static/images/coding.png" style="float:left;" class="pull-left">
-          <p class="pull-left msc-text" style="text-align: left;">IDK what i did here.</p>
+          <img class="msc" src="static/images2/cpa.png" style="float:left;" class="pull-left">
+          <p class="pull-left msc-text" style="text-align: left;">Received my CPA designation in April 2017.</p>
         </div>
         <div class="col-md-12">
-          <img class="msc" src="static/images2/mcmaster.png" style="float:right;" class="pull-right">
-          <p class="pull-right msc-text" style="text-align: right;">what am i doing with my life.</p>
+          <img class="msc" src="static/images2/cpa.png" style="float:right;" class="pull-right">
+          <p class="pull-right msc-text" style="text-align: right;">Received my CPA designation in April 2017.</p>
         </div>
         <div class="col-md-12">
-          <img class="msc" src="static/images/coding_3.png" style="float:left" class="pull-left">
-          <p class="pull-left msc-text" style="text-align: left;">Favourite books maybe?.</p>
+          <img class="msc" src="static/images2/mcmaster.png" style="float:left" class="pull-left">
+          <p class="pull-left msc-text" style="text-align: left;">Completed an Honors Bachelor of Commerce in April 2014.</p>
         </div>
       </div>
     </section>
@@ -177,7 +177,7 @@
   <!--portfolio parallax-->
   <div class="portfolio-bg" id="portfolio">
     <div class="heading">
-      <span class="center">PORTFOLIO</span>
+      <span class="center">PROJETS</span>
     </div>
   </div>
   <!--./portfolio parallax-->
@@ -221,9 +221,9 @@
         </article>
 
         <article class="col-md-4 text-justify">
-            <img class="mx-auto portfolio-sec " src="static/images/placeholder.jpg"><br>
-            <h3 class="text-center">Project #6</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut ullamcorper felis, ut sodales odio. Suspendisse lectus dui, efficitur eget molestie eget, commodo vel dui. Suspendisse eu mauris hendrerit, aliquam libero vel, ornare quam. Donec quis quam eleifend, auctor lorem a, placerat quam.</p>
+            <img class="mx-auto portfolio-sec " src="static/images2/raspbian.jpg"><br>
+            <h3 class="text-center">Raspberry Pi</h3>
+            <p>I've used my Pi in a number of projects now. It has been an Ethereum Node, a Kodi media centre, a Retro-Pi and several other small weekend projects.</p>
         </article>
         <!--./second row-->
 
